# traxxas

./: .gitignore
traxxas_launch/: package.xml  setup.cfg  setup.py
traxxas_launch/launch/: traxxas_bringup.launch.py
traxxas_pose_estimation/: .gitignore  package.xml  setup.cfg  setup.py
traxxas_pose_estimation/launch/: bringup.launch.py
traxxas_pose_estimation/traxxas_pose_estimation/: ackermann_odom_node.py  pose_traxxas_node.py  record_csv_node.py  serial_sensors_node.py  steering_angle_node.py
traxxas_pose_estimation/trayectorias/: traxxas_waypoints_1.csv  traxxas_waypoints_2.csv  traxxas_waypoints_20260412_162337.csv  traxxas_waypoints_3circulo.csv  traxxas_waypoints_4circulos.csv
traxxas_stop/: package.xml  setup.cfg  setup.py
traxxas_stop/launch/: bringup_stop.launch.py  qcar_stop.launch.py  traxxas_pose_stop.launch.py
traxxas_stop/traxxas_stop/: crosswalk_confirmation_node.py  crosswalk_node.py  pp_node.py  pure_pursuit_stop_traxxas.py  pwm_controller.py  qcar_pp_node.py  qcar_routine_client.py  qcar_stop_maneuvers.py  qcar_stop_routine_action_server.py  qcar_stop_sign_node.py  stop_confirmation_node.py  stop_event_merger_node.py  stop_maneuvers.py  stop_mission_node.py  stop_routine_action_server.py  stop_routine_client.py  stop_sign_node.py  traxxas_watchdog_node.py
traxxas_stop_interfaces/: CMakeLists.txt  package.xml
traxxas_stop_interfaces/action/: StopRoutine.action
