<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traxxas_stop_interfaces</name>
  <version>0.0.1</version>
  <description>
    Interfaces ROS2 (actions) para el paquete traxxas_stop.
    Genera la action StopRoutine usada por el action server de frenado.
  </description>
  <maintainer email="marml@todo.todo">marml</maintainer>
  <license>TODO</license>

  <!-- Herramienta de build para paquetes CMake -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Generador de interfaces ROS2 -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencia de la action (necesita action_msgs para el goal/result/feedback) -->
  <depend>action_msgs</depend>

  <!-- Este paquete pertenece al grupo de generadores de interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>